# mini-mcmc

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: audit.yml  general.yml
examples/: demo.rs  gauss_mh.rs  metropolis_hastings.rs  minimal_hmc.rs  minimal_mh.rs  minimal_nuts.rs  mixture_gibbs.rs  poisson_mh.rs  rosenbrock3d_hmc.rs  rosenbrock_hmc.rs  rosenbrock_mh.rs  two_d_gaussian.rs
src/: batched_hmc.rs  core.rs  dev_tools.rs  distributions.rs  euclidean.rs  generic_hmc.rs  generic_nuts.rs  gibbs.rs  hmc.rs  io.rs  ks_test.rs  lib.rs  main.rs  metrohast.rs  metropolis_hastings.rs  mini_mcmc.rs  nuts.rs  stats.rs
src/io/: arrow.rs  csv.rs  mod.rs  parquet.rs
tests/: 2d_gaussian_test.rs  metrohast_2d_gaussian_test.rs  metrohast_poisson_test.rs
