[package]
name = "mini-mcmc"
version = "0.2.1"
edition = "2021"
authors = ["Matteo Gätzner <matteo.gatzner@gmail.com>"]
license = "Apache-2.0" 
description = "A small Rust library for Markov Chain Monte Carlo methods."
repository = "https://github.com/MatteoGaetzner/mini-mcmc"
readme = "README.md"
documentation = "https://docs.rs/mini-mcmc"
homepage = "https://github.com/MatteoGaetzner/mini-mcmc"

exclude = [
  "target/*",
]

[dependencies]
rand = {version="0.8", features=["small_rng"]}
rand_distr = "0.4"
nalgebra = "0.33"
rayon = "1.5"
indicatif = "0.17"
num-traits = "0.2"
csv = {version="1.3", optional=true}
arrow = {version="54.1", optional=true}
parquet = {version="54.1", optional=true}
burn = { version = "0.16.0", features = ["autodiff", "candle", "ndarray",  "wgpu"] }
once_cell = "1.20.3"

[features]
default = ["csv", "arrow", "parquet"]
csv = ["dep:csv"]
arrow = ["dep:arrow"]
parquet = ["dep:parquet"]
logging = []

[[example]]
name = "minimal_mh"

[[example]]
name = "gauss_mh"

[[example]]
name = "poisson_mh"

[[example]]
name = "rosenbrock_mh"

[[example]]
name = "mixture_gibbs"

[dev-dependencies]
plotters = "0.3"
kolmogorov_smirnov = "1.1.0"
tempfile = "3.16"

[profile.dev]
debug = true
