[package]
name = "mini-mcmc"
version = "0.7.0"
edition = "2021"
authors = ["Matteo Gätzner <matteo.gatzner@gmail.com>"]
license = "Apache-2.0" 
description = "A compact Rust library for Markov Chain Monte Carlo (MCMC) methods with GPU support."
repository = "https://github.com/MatteoGaetzner/mini-mcmc"
readme = "README.md"
documentation = "https://docs.rs/mini-mcmc"
homepage = "https://github.com/MatteoGaetzner/mini-mcmc"

exclude = [
  "target/*"
]

[dependencies]
rand = {version="0.8", features=["small_rng"]}
rand_distr = "0.4"
rayon = "1.5"
indicatif = "0.17"
num-traits = "0.2"
csv = {version="1.3", optional=true}
arrow = {version="54.1", optional=true}
parquet = {version="54.1", optional=true}
burn = { version = "0.17.0", features = ["autodiff", "ndarray"] }
ndarray = { version = "0.16.1" }
ndarray-stats = "0.6.0"
approx = "0.5.1"
rustfft = "6.2.0"

[features]
default = []
wgpu = ["burn/wgpu"]
csv = ["dep:csv"]
arrow = ["dep:arrow"]
parquet = ["dep:parquet", "dep:arrow"]

[dev-dependencies]
ndarray = { version = "0.16.1", features = ["approx"] }
plotly = "0.12.1"
kolmogorov_smirnov = "1.1.0"
tempfile = "3.16"
criterion = "0.5.1"

[profile.dev]
debug = true

[profile.release]
debug = false
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
